A bunch of i18n patches from Jean-Luc Malet, plus minor cleanups; Jira #OFBIZ-195
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4800 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels_fr.properties
+++ b/applications/accounting/config/AccountingUiLabels_fr.properties
@@ -6,23 +6,33 @@
 en=Anglais
 fr=Fran\u00e7ais
 de=Allemand
-AccountingAccount=Compte
+
 AccountingAccountId=Id du Compte
 AccountingAccountLimit=Limite facturaction
+AccountingAccountNumber=Num\u00e9ro de compte
+AccountingAccountType=Type de compte 
 AccountingAmount=Montant
 AccountingAnyInvoiceStatus=Tous statut facture
 AccountingAnyPaymentMethod=Toutes m\u00e9thode de Paiement
 AccountingAnyPaymentStatus=Tous statut Paiement
+AccountingBankName=Nom de la Banque
+AccountingBillingAccount=Compte de facturation
 AccountingBillingAccountInvoices=Factures d'un compte de facturation
+AccountingBillingAccountOnly=Paiement exclusivement sur un compte de facturation
 AccountingBillingAccountPayments=Paiements compte de facturation
 AccountingBillingAccounts=Comptes de facturation
 AccountingBillingAcct=Compte de facturation
 AccountingBillingContactMechId=Id Coordonn\u00e9es
 AccountingBilling=Facture
 AccountingBillingInformation=Information comptable
+AccountingBillUpTo=A payer \u00e0
 AccountingBothInvoiceIdBillingAccountIdEmptyError=La facture et le compte de facturation ne peuvent \u00eatre vide tout les deux
+AccountingCardNumber=Num\u00e9ro de carte
+AccountingCardType=Type de carte
 AccountingComments=Commentaires
 AccountingCompanyName=OFBiz: Gestion comptable
+AccountingCompanyNameAccount=Nom de la soci\u00e9t\u00e9 sur le compte
+AccountingCompanyNameCard=Nom de la soci\u00e9t\u00e9 sur la carte
 AccountingCompanySubtitle=un des \u00e9l\u00e9ments de la famille <<Open For Business>>, logiciels libres de gestion.
 AccountingCreateBillingAccount=Cr\u00e9ation d'un compte de facturation
 AccountingCreateBillingAccountPermissionError=Erreur s\u00e9curit\u00e9 : pour cr\u00e9er un compte de facturation, il faut avoir la permission ACCOUNTING_CREATE ou ACCOUNTING_ADMIN.<br>
@@ -36,6 +46,7 @@ AccountingCreatePayment=Creation d'un Paiement
 AccountingCreatePaymentPermissionError=Erreur s\u00e9curit\u00e9 : pour saisir un paiement, vous devez soit \u00eatre l'acteur demandeur ou payeur soit il faut avoir la permission PAY_INFO_CREATE ou PAY_INFO_ADMIN.<br>
 AccountingCreatePermissionError=Erreur s\u00e9curit\u00e9 : pour cr\u00e9er un compte de facturation, il faut avoir la permission ACCOUNTING_CREATE ou ACCOUNTING_ADMIN.<br>
 AccountingCreditCard=Carte de cr\u00e9dit
+AccountingCurrency=Devise
 AccountingDate=Date Comptable
 AccountingDateFilter=Date de sortie
 AccountingDeleteBillingAccountTermPermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer un terme de compte de facturation, il faut avoir la permission ACCOUNTING_DELETE ou ACCOUNTING_ADMIN.<br>
@@ -44,8 +55,11 @@ AccountingDueDate=Date de facture
 AccountingEditPayment=Edition des Paiements
 AccountingEffective=%Effective%
 AccountingEffectiveDate=Date Effective
+AccountingEFTAccount=R\u00e9f\u00e9rence bancaire
+AccountingExpirationDate=Date d'expiration
 AccountingFindInvoices=Factures trouv\u00e9es
 AccountingFindPayments=Paiements trouv\u00e9s
+AccountingFirstNameCard=Pr\u00e9nom sur la carte
 AccountingFromParty=De l'acteur
 AccountingFromPartyId=De l'acteur ref.
 AccountingGlAcc=Comptes comptables
@@ -60,6 +74,7 @@ AccountingInvoices=Factures
 AccountingInvoicesFound=Factures trouv\u00e9es
 AccountingInvoicePayments=Paiements facture
 AccountingInvoiceTotal=Total de la facture
+AccountingLastNameCard=Nom sur la carte
 AccountingLineTotal=Total de la ligne
 AccountingLookupInvoices=Factures recherch\u00e9es
 AccountingLookupPayment=Paiement recherch\u00e9
@@ -67,9 +82,13 @@ AccountingMainPageNote=NOTE: Cette application est en cours de construction, vou
 AccountingMainPage=Page principale Gestion des comptes comptables
 AccountingManagerApplication=Application de Gestion des comptes comptables
 AccountingMethod=M\u00e9thode
+AccountingMiddleNameCard=Deuxi\u00e8me pr\u00e9nom sur la carte
 AccountingName=Nom
+AccountingNameAccount=Nom sur le compte
 AccountingNewAccount=Nouveau compte
 AccountingNewPayment=Nouveau Paiement
+AccountingNoAccount=Aucun compte
+AccountingNoBillingAccount=Aucun compte de facturation
 AccountingNoBillingAccountFound=Il n'y a pas de compte de facturation.
 AccountingNoBillingAccountRole=Aucune association avec un client pour ce compte de facturation.
 AccountingNoBillingAccountTerm=Aucun terme pour ce compte.
@@ -77,20 +96,29 @@ AccountingNocontactinformationset=Aucune coordonn\u00e9e selectionn\u00e9e
 AccountingNocurrentinvoicelineitems=Pas de ligne de facture s\u00e9lectionn\u00e9e
 AccountingNoInvoicesFound=Pas de facture trouv\u00e9e
 AccountingNoPaymentsfound=Pas de paiement trouv\u00e9
+AccountingNoPaymentMethods=Il n'y a aucune m\u00e9thode de paiement renseign\u00e9e.
+AccountingOfflinePayment=Paiement diff\u00e9r\u00e9
 AccountingOrders=Commandes
 AccountingPaymentDate=Date de paiement
 AccountingPayment=Paiement
+AccountingPaymentAlreadyReceived=Paiement d\u00e9j\u00e0 re\u00e7u
 AccountingPaymentID=R\u00e9f\u00e9rence du Paiement
+AccountingPaymentInformation=Information sur le moyen de paiement
 AccountingPaymentMethodId=R\u00e9f\u00e9rence de m\u00e9thode de paiement
 AccountingPaymentMethodType=Type de m\u00e9thode de paiement
 AccountingPaymentPreferenceId=Param\u00e8tre de paiement
 AccountingPayments=Paiements
 AccountingPaymentsFound=Paiement(s) trouv\u00e9 (s)
 AccountingPaymentType=Moyen de Paiement
+AccountingPleaseSendPaymentTo=Merci d'envoyer le paiement \u00e0 :
+AccountingPrefixCard=Pr\u00e9fixe sur la carte
 AccountingProduct=Produit
 AccountingQuantity=Quantit\u00e9
+AccountingReceivePayment=Recevoir le paiement
 AccountingReferenceNumber=Nombre de r\u00e9f\u00e9rence
+AccountingRoutingNumber=Num\u00e9ro de routage
 AccountingStatus=Statut
+AccountingSuffixCard=Suffixe sur la carteAccountingAccount=Compte
 AccountingToParty=A l'acteur
 AccountingToPartyId=A la r\u00e9f. de l'acteur
 AccountingTotal=Total
