--- a/applications/ecommerce/config/EcommerceUiLabels_fr.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_fr.properties
@@ -163,6 +163,7 @@ EcommerceChooseAmount=Choisir un montant
 EcommerceChooseVariations=Choix de la variable
 EcommerceContinueShopping=Continuer les achats
 EcommerceCustomerReviews=Commentaire clients
+EcommerceEcommerce=Ecommerce
 EcommerceEmptyCart=Panier vide
 EcommerceErrorNoPromotionFoundWithID= ERREUR: Pas de promotion avec cette r\u00e9f\u00e9rence
 EcommerceGoToList=Aller \u00E0 la liste
