--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -282,6 +282,7 @@ ProductActualTransport=Transport retenu
 ProductAddCatalogProdCat=Ajouter une cat\u00E9gorie d'article \u00E0 un catalogue (s\u00E9lectionner un catalogue et un type, optionnellement une date de d\u00E9part)
 ProductAddCatalogProductCategory=Ajout d'une cat\u00E9gorie d'article au catalogue (s\u00E9lectionnez le catalogue et le type, optionnellement une date de d\u00E9part)
 ProductAddContentProduct=Ajout du contenu d'un article
+ProductAddContentProductConfigItem=Add Content to Product Config Item
 ProductAddEmail=Ajout d'adresse courriel
 ProductAddFacility=Ajout de donn\u00E9es stock
 ProductAddFacilityGroupMember=Ajouter un membre au groupe de stock
@@ -300,6 +301,7 @@ ProductAddProductCategoryMember=Ajouter un article \u00E0 la cat\u00E9gorie d'ar
 ProductAddProductCategoryMemberFromDate=Ajouter un article \u00E0 la cat\u00E9gorie d'article (s\u00e9lectionner la cat\u00e9gorie, entrer la date)
 ProductAddProductFeatureFromCategory=Ajouter les cact\u00E9ristiques  d'une cat\u00E9gorie \u00e0 l'article
 ProductAddProductFeatureTypeId=Ajouter une cact\u00E9ristique \u00e0 l'article via son type et son code r\u00E9f\u00E9rence
+ProductAddProductsUsingDefaultQuantities=Ajouter des articles de cette cat\u00E9gorie dans le panier avec les quantit\u00E9s par d\u00E9faut
 ProductAddProductKeyword=Ajouter un de mot cl\u00E9 \u00E0 \u00e0 l'article
 ProductAddPromoRule=Ajouter des r\u00E8gles de promotion
 ProductAddresses=Adresses
@@ -308,6 +310,8 @@ ProductAddStorePromo=Ajouter une promotion magasin (s\u00e9lectionner le magasin
 ProductAddStorePromoOptionalDate=Ajouter une promotion magasin (s\u00e9lectionner promotion, entrer l'option jusqu'\u00e0 la date)
 ProductAddToPackage=Ajouter au lot
 ProductAdvancedSearch=Recherche avanc\u00E9e
+ProductAdvancedSearchIn=Recherche avanc\u00E9e dans
+ProductAdvancedSearchinCategory=Recherche avanc\u00E9e dans les cat\u00E9gories
 ProductAisle=All\u00E9e
 ProductAlternate=Remplacement
 ProductAlternateKeyWordThesaurus=Th\u00e9saurus de mots cl\u00e9s de remplacement
@@ -371,6 +375,7 @@ ProductCategoryId=Cat\u00E9gorie
 ProductCategory_Id=R\u00E9f\u00E9rence de la cat\u00E9gorie 
 ProductCategoryImageUrl=Url de l'image pour cette cat\u00E9gorie
 ProductCategoryMembers=Membre de la cat\u00E9gorie
+ProductCategoryNotFoundforCategoryID=Pas de cat\u00E9gorie pour cet identifiant
 ProductCategoryPage=Page de la cat\u00E9gorie
 ProductCategoryRollupChildCategories=Nomenclature \: cat\u00E9gorie enfant
 ProductCategoryRollupParentCategories=Nomenclature \: cat\u00E9gorie parent
@@ -382,10 +387,13 @@ ProductCheckInventory=V\u00e9rifie le stock
 ProductChildCategoryId=Cat\u00E9gorie enfant
 ProductChild=Enfant
 ProductChildGroupId=R\u00e9f. du groupe Enfant
+ProductChooseCatalog=Choisir un catalogue
 ProductChooseTopCategory=Choisir une cat\u00E9gorie sup\u00E9rieure
 ProductComments=Commentaires
 ProductCompanySubtitle=un des \u00E9l\u00E9ments de la famille <<Open For Business>>, logiciel libre de gestion.
 ProductConditions=Conditions
+ProductConfigs=Configurations
+ProductConfigItems=Configurations
 ProductConfirmSelectedMoves=Confirmer le mouvement s\u00E9lectionn\u00E9
 ProductConfirmShipmentUps=Confirmer l'exp\u00e9dition avec UPS
 ProductContactTypeInformation=Information type de contact
@@ -399,6 +407,7 @@ ProductCopyProductCategoryMembersToAnotherCategory=Associe les articles de cette
 ProductCouldNotFindFacilityWithId=Impossible de trouver le stock avec la r\u00E9f\u00E9rence
 ProductCouldNotFindProduct=Article non trouv\u00E9
 ProductCouldNotFindProductCategoryWithId=Impossible de trouver la cat\u00E9gorie d'article avec la r\u00E9f\u00E9rence
+ProductCouldNotFindProductConfigItem=Could Not Find Product Config Item with ID
 ProductCountry=Pays
 ProductCreateAProductFeatureCategory=Cr\u00E9er une caract\u00e9ristique de cat\u00E9gorie
 ProductCreatedBy=Cr\u00e9\u00e9 par
@@ -410,6 +419,7 @@ ProductCreateNewInventoryItemFacility=Cr\u00E9er une ligne de stock pour ce stoc
 ProductCreateNewInventoryItemProduct=Cr\u00E9er une ligne de stock pour ce produit
 ProductCreateNewProdCatalog=Cr\u00E9ation d'un nouveau catalogue d'article
 ProductCreateNewProduct=Cr\u00E9ation d'un nouvel article
+ProductCreateNewProductConfigItemContent=Create New Product Config Item Content
 ProductCreateNewProductContent=Ajout d'un \u00e9l\u00e9ment de contenu \u00e0 l'article
 ProductCreateNewProductPromo=Cr\u00e9ation d'une promotion d'articles
 ProductCreateNewProductStore=Cr\u00e9ation d'une nouvelle soci\u00e9t\u00e9
@@ -453,9 +463,11 @@ ProductEditInventoryItemWithId=Edition d'une ligne de stock avec sa r\u00e9f\u00
 ProductEditProduct=Edition de l'article
 ProductEditProductWithProductId=Edition de l'article avec sa r\u00E9f\u00E9rence 
 ProductEditShipment=Edition de l'exp\u00e9dition
+ProductEntireCatalog=Catalogue entier
 ProductErrorFacility=Erreur\: donn\u00E9e stock
 ProductErrorNoPackagesFoundForShipment=ERREUR: Pas de paquets trouv\u00e9s pour cette exp\u00e9dition
 ProductErrorOrderIdNotFound=Erreur : commande non trouv\u00e9e avec la r\u00e9f\u00e9rence [${orderId}] 
+ProductErrorProductNotFound=ERREUR\: Article non trouv\u00E9
 ProductErrorType=Erreur\: type
 ProductEstimatedDates=Dates devis
 ProductEstimateId= R\u00e9f du devis
@@ -565,9 +577,11 @@ ProductIssue=Emettre
 ProductIssueAll=Tout \u00e9mettre
 ProductIssuedReservedTotalOrdered=[Emises + R\u00e9serv\u00e9es = Total] = Commandes
 ProductItem=Ligne stock
+ProductItems=Articles
 ProductItemDescription=Description de la ligne article
 ProductItemIdGiftPurchaseFreeShipping=Ligne article cadeau lors des actions d'achat ou pour une exp\u00E9dition gratuite, le type de m\u00E9thode d'exp\u00E9dition auquel la gratuit\u00E9 sera appliqu\u00E9 (si blanc n'importe quel m\u00E9thode peut \u00EAtre utilis\u00E9)
 ProductItemId=R\u00E9f. de la ligne de stock
+ProductItemOutofStock=Cet article n'est pas en stock
 ProductItemPrc=Prix de la ligne article
 ProductItemProduct=Ligne article : Produit
 ProductItems=Lignes d'article
@@ -585,6 +599,7 @@ ProductLevel=Niveau
 ProductLine=Ligne
 ProductLinkOneImageUrl=1er lien de l'image URL
 ProductLinkTwoImageUrl=2i\u00E8me lien de l'image URL
+ProductListPrice=Prix public
 ProductLocaleString=Code langue
 ProductLocationFor=Emplacement pour
 ProductLocation=Emplacement
@@ -610,6 +625,7 @@ ProductMinPurchase=Minimum d' achat
 ProductMorePackageFoundShipment=Plus d'un paquet trouv\u00e9 pour cette exp\u00e9dition. Faites une saisie manuellement.
 ProductMoreRouteSegmentFound=Plus d'un itin\u00e9raire trouv\u00e9. Saisissez l'exp\u00e9dition manuellement
 ProductMoveQuantity=%Quantit\u00E9 d\u00E9plac\u00E9e%
+ProductMultiChoice=Multi Choice
 ProductMultipleOrderItemsProduct=Multiple ordre d'article pour ce produiti
 ProductName=Nom
 ProductNeedStockMove=Besoin de d\u00E9placer le stock
@@ -648,12 +664,14 @@ ProductNoItemsToReceive=Il n'y a pas de ligne \u00e0 recevoir
 ProductNoInventoryFoundToPick=Pas de ligne de stock trouv\u00e9 \u00e0 pr\u00e9parer
 ProductNoKeywordsFound=Pas de mot cl\u00E9 trouv\u00E9
 ProductNoLocation=Pas d'emplacement
+ProductNoLongerAvailable=Epuis\u00E9
 ProductNoOrdersFoundReadyToPickOrNeedStockMoves=Pas de commandes trouv\u00E9es pouvant \u00eatre pr\u00e9par\u00e9es ou qui ont besoin de mouvement le stock
 ProductNoParentCategoriesFound=Cat\u00E9gorie parent non trouv\u00E9e
 ProductNoParentGroupsFound=Groupe Parent non trouv\u00e9
 ProductNoPicksStarted=Pas de pr\u00e9paration demarr\u00e9e
 ProductNoPriceRulesFound=R\u00E8gles de prix non trouv\u00E9es
 ProductNoProductsInCategory=Pas d'article dans cette cat\u00E9gorie
+ProductNoProductsInThisCategory=Il n'y a pas d'article dans cette cat\u00E9gorie
 ProductNoResultsFound=aucun \u00e9l\u00e9ment trouv\u00e9
 ProductNoSelectableFeaturesFound=Caract\u00E9ristiques s\u00E9l\u00E9ctionn\u00E9es non trouv\u00E9es. SVP, en  cr\u00E9er une  et recommencer.
 ProductNoShipmentsFound=Pas d'exp\u00e9ditions trouv\u00e9es
@@ -681,6 +699,7 @@ ProductNotOriginFacility=Pas dans le magasin d'origine
 ProductNotPurchaseShipment=mais cela n'est pas une exp\u00e9dition d'achat
 ProductNotSalesShipment=mais cela n'est pas une exp\u00e9dition de vente
 ProductNotSet=Pas pr\u00e9vu
+ProductNotYetAvailable=Pas encore disponible
 ProductNumberQuantity=Quantit\u00E9
 ProductOemPartyId=R\u00e9f fournisseur OEM
 ProductOneInventoryFacility=un magasin de stock
@@ -747,6 +766,7 @@ ProductProductCategory=Cat\u00E9gorie d'articles
 ProductProductCategoryId=R\u00E9f\u00E9rence d'une cat\u00E9gorie d'article
 ProductProductCategoryMemberMaintenance=Articles r\u00E9f\u00E9renc\u00E9s dans cette cat\u00E9gorie (\u00E9dition)
 ProductProductCategoryType=Type de cat\u00E9gorie d'article
+ProductProductConfigItemContentTypeId=Product Config Item Content Type Id
 ProductProductContentTypeId=Type de contenu d'article
 ProductProductDescription=Description article
 ProductProductDepth=Profondeur 
@@ -757,7 +777,11 @@ ProductProductId=R\u00E9f\u00E9rence de l'article
 ProductProductIdMissing= Le champ r\u00E9f\u00E9rence de l'article est vide, il est obligatoire
 ProductProductNameId=Nom de l'article 
 ProductProductName=Nom de l'article
+ProductProductNoLongerAvailable=Cet article n'est plus disponible \u00E0 la vente
+ProductProductNotFound=Pas d'article avec cet identifiant
 ProductProductNotFoundWithProduct=Article non trouv\u00E9 avec sa r\u00E9f\u00E9rence
+ProductProductNotReviewedYet=Cet article n'a pas encore \u00E9t\u00E9 revu
+ProductProductNotYetMadeAvailable=Cet article n'est pas encore disponible \u00E0 la vente
 ProductProductPage=Page d'articles
 ProductProductPromotionsList=Liste d'articles en promotion
 ProductProductId=R\u00e9f de l'article
@@ -791,6 +815,7 @@ ProductPurchaseOrderNumber=Num\u00e9ro d'ordre d'achat
 ProductPurchaseThru=Achat jusqu'\u00e0
 ProductPurchaseThruDate=Achat jusqu'\u00e0 la date
 ProductPurposeTypeNotFoundWithId=Type de but non trouv\u00E9 avec la r\u00E9f\u00E9rence
+ProductQuestion=Question
 ProductQuickShipOrder=Exp\u00e9dition express
 ProductQuickShipOrderFrom=Exp\u00e9dition express de
 ProductQoh=QOH
@@ -819,6 +844,7 @@ ProductReceiveSelectedProduct=R\u00e9ception d'article(s) s\u00e9lectionn\u00e9(
 ProductReceiveSelectedShipment=R\u00e9ception des exp\u00e9ditions s\u00e9lectionn\u00e9es
 ProductRecreateAssociation=(Vous devez recr\u00e9er l'association pour modifier cela.)
 ProductRedExplanation=<b style="color: red;">Rouge</b> date/heure sont not\u00e9es en <b style="color: red;">rouge</b> lorsque l'heure pr\u00e9c\u00e9de la date de d\u00e9but ou d\u00e9passe la date de fin. Si la date de d\u00e9but est en <b style="color: red;">rouge</b>, l'association n'a pas pu encore d\u00e9duter ; si la date de fin est en <b style="color: red;">rouge</b>, l'association a d\u00e9j\u00e0 expir\u00e9 (<u>et il faudra s\u00fbrement la supprimer</u>).
+ProductRegularPrice=Prix standard
 ProductReInduceKeywords=Reg\u00e9n\u00e9ration des Mots cl\u00E9s
 ProductRejectedReason=Raison rejet\u00e9e
 ProductRejectionReason=Raison du rejet
@@ -854,6 +880,8 @@ ProductSaleRule=R\u00E8gles de vente
 ProductSalesTax=R\u00e8gles de taxe
 ProductSalesThruDate=R\u00e8gles jusqu'\u00e0 la date
 ProductSalesDiscontinuationNotAvailable=Fermer la vente quand stock vide
+ProductSearchCatalog=Recherche catalogue
+ProductSearchinCategory=Recherche dans cat\u00E9gorie
 ProductSearchProducts=Rechercher l'article
 ProductSection=Section
 ProductSegment=Segment
@@ -898,6 +926,7 @@ ProductShortDescription=Description courte
 ProductShowActive=Voir les activ\u00e9s
 ProductShowAll=Voir tous
 ProductShowEmptyItems=Voir les articles vides
+ProductSingleChoice=Single Choice
 ProductSingleOrderItemProduct=Un seul ordre d'article pour celui-ci
 ProductSingleUse=Utilisable une seule fois %non cumulable%
 ProductSettingsFromPrimaryOrder=Prendre les param\u00e9trages \u00e0 partir de l'ordre principal
@@ -919,6 +948,7 @@ ProductStoreShipmentMethodAssociations=Mode d'exp\u00e9dition associ\u00e9 \u00e
 ProductStyleSheet=Feuille de style
 ProductSubject=Sujet
 ProductSubmit=Soumettre
+ProductSubProduct=SubProduct
 ProductSubTitle=Sous titre
 ProductSupportThruDate=Date de fin de support
 ProductTargetProductCategory=Categorie cible
@@ -976,6 +1006,7 @@ ProductUseDays=Nb jour d'usage
 ProductUseDaysLimit=Limite d'usage en nb de jour
 ProductUsedForDisplayOrdering=Montrer l'ordre
 ProductUseQuickAdd=Ajout rapide
+ProductUsuallyShipsIn=Habituellement exp\u00E9di\u00E9 en
 ProductValueType=Valeur, type
 ProductVariants=Variantes
 ProductVariantProduct=C'est un article variante?
@@ -995,16 +1026,8 @@ ProductWeight=Poids
 ProductWeightUnit=Unit\u00e9 de poids
 ProductWeightUomId=Unit\u00e9 de poid
 ProductWidthUomId=Unit\u00e9 de largeur
+ProductWorkItem=Article fabriqu\u00e9
 
-ProductConfigs=Configurations
-ProductConfigItems=Configurations
-ProductSingleChoice=Single Choice
-ProductMultiChoice=Multi Choice
-ProductQuestion=Question
-ProductCouldNotFindProductConfigItem=Could Not Find Product Config Item with ID
-ProductCreateNewProductConfigItemContent=Create New Product Config Item Content
-ProductAddContentProductConfigItem=Add Content to Product Config Item
-ProductProductConfigItemContentTypeId=Product Config Item Content Type Id
 
 ##################################################################
 # ProductSearchEvents
@@ -1015,4 +1038,3 @@ productSearchEvents.error_getting_results=Erreur survenue pendant la recherche
 
 
 
-ProductSubProduct=SubProduct
