Added some ui label improvements from Jean-Luc Malet, submitted in Jira #OFBIZ-198
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4905 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels_fr.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_fr.properties
@@ -197,6 +197,7 @@ EcommercePromotionDetails=D\u00e9tail de la promotion
 EcommercePromotionInformation=Information de la promotion
 EcommercePromotionsApplied= Promotion appliqu\u00e9e
 EcommercePublic=Public
+EcommerceQuickAdd=Ajout rapide
 EcommerceRanking=rang
 EcommerceRating=Note (1-5; 5 la meilleure)
 EcommerceRecalculateCart=Recalcule le panier
