--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -55,6 +55,7 @@ OrderCannotBeChanged=(Ne peut \u00eatre modifi\u00e9 sans r\uee09initialis\u00e9
 OrderCompanyName=OFBiz: Gestion commerciale
 OrderCompanySubtitle=un des \u00e9l\u00e9ments de la famille <<Open For Business>>, logiciels libres de gestion.
 OrderContactInformation=Information sur l'acteur
+OrderCreatedBy=Cr\u00e9\u00e9 par
 OrderCreateNewReturn=Cr\u00e9er un nouveau retour
 OrderCreateOrder=Cr\u00e9ation de la commande
 OrderCreateReturn=Cr\u00e9er un retour
@@ -80,13 +81,16 @@ OrderItemsSubTotal=Sous-Total articles
 OrderItemTotal=Total Article
 OrderLookupOrder=Lancer recherche commande(s)
 OrderLookupReturn=Lancer recherche retour(s)
+OrderNewShipmentForShipGroup=Nouvelle exp\u00e9dition pour le groupe 
+OrderNoChannel=Aucun canal
 OrderNoGiftWrap=Aucune Promotion
 OrderNoNotes=Aucune note pour cette commande.
 OrderNoOrderFound=Aucune commande trouv\u00e9e
 OrderNoOrderItemsToDisplay=Aucune ligne de commande \u00e0 afficher.
 OrderNote=Note
 OrderNotes=Notes
-OrderNotesCreateNew=Cr\u00e9er nouvelleOrderNoReturnFound=Aucun retour trouv\u00e9.
+OrderNotesCreateNew=Cr\u00e9er une nouvelle note
+OrderNoReturnFound=Aucun retour.
 OrderNoReturnFoundWithId=Aucun retour trouv\u00e9 avec cette r\u00e9f\u00e9rence.
 OrderNotShipped=Non Livré
 OrderNotUsedForPurchase=Non utilis\u00e9 pour les commandes d'achat
@@ -102,23 +106,31 @@ OrderOrderEntryPaymentSettings=Renseignements sur la facturation
 OrderOrderEntryShipToSettings=Renseignements sur la livraison
 OrderOrderFor=Commande pour
 OrderOrderFound=Commande(s) trouv\u00e9e(s)
+OrderOrderHeaderInfo=Informations ent\u00eate
 OrderOrderId=R\u00e9f. de commande
 OrderOrderItems=Lignes de commande
 OrderOrderList=Commande(s) importante(s)
 OrderOrderNeedingAttention=Commandes n\u00e9cessitant de l'attention
 OrderOrderNumber=Num\u00e9ro de commande
 OrderOrderOptionSettings=Renseignements des options de commande
-OrderOrderPurchaseToBeScheluded=Commandes d'achat \u00e0 lancer
+OrderOrderPurchaseToBeScheduled=Commandes d'achat \u00e0 lancer
 OrderOrderReturn=Retour
 OrderOrderReturns=Retours
+OrderOrderShortcuts=Raccourcis
 OrderOrderTotal=Total commande
 OrderOrderType=Type d'ordre
+OrderOriginFacility=Magasin d'origine
 OrderPaymentOfflineCheckMoney=Paiement en diff\u00e9r\u00e9:  V\u00e9rifiez le mandat
 OrderPONumber=R\u00e9f. Commande d'achat
 OrderPrice=Prix
+OrderProductStore=Marque commerciale
 OrderPromotionCouponCodes=Promotion/Coupon Codes
 OrderPurchaseOrder=Commande d'achat
 OrderQuantity=Quantit\u00e9
+OrderQuickRefundEntireOrder=Remboursement rapide de toute la commande
+OrderQuickShipEntireOrder=Livraison rapide de toute la commande
+OrderQuote=Quotation
+OrderQuotes=Quotation
 OrderRecalculateOrder=Recalcul de la commande
 OrderReceiveReturn=Recevoir un retour
 OrderRemainingSubTotal=Sous-Total restant
@@ -132,11 +144,16 @@ OrderReturnHeader=Retour \u00e0 l'ent\u00e8te
 OrderReturnItems=Retour aux articles 
 OrderReturnId=R\u00e9f. du retour
 OrderReturnToFacility=Retour au service
+OrderReviewOrder=V\u00e9rifier la commande
+OrderSalesChannel=Canal de vente
 OrderSalesOrder=Commande de vente
 OrderSalesTax=T.V.A.
+OrderScheduleDelivery=Colisage
 OrderSelectPartyToOrder=S\u00e9lectionner le type d'acteur \u00e0 associer \u00e0 la commande
 OrderSelectedGiftNotAvailableForAll=La promotion ne s'applique pas sur tous les articles. Ceux sur lesquels elle peut s'appliquer sont s\u00e9lectionn\u00e9s, les autres restent inchang\u00e9s. 
 OrderSendEmail=Envoi E-mail
+OrderShipAfterDate=A livrer apr\u00e8s
+OrderShipBeforeDate=A livrer avant
 OrderShipGroup=Num\u00e9ro de lot
 OrderShipmentInformation=Informations sur le moyen d'exp\u00e9dition
 OrderSplittingPreference=Choix de livraison
@@ -154,7 +171,9 @@ OrderUnitList=Unit\u00e9 / Liste
 OrderUseDefaultComment=Utiliser par d\u00e9faut le commentaire pour les autres lignes
 OrderUseDefaultDesiredDeliveryDate=Utiliser par d\u00e9faut la date de livraison souhait\u00e9 pour les autres lignes
 OrderViewEditDelivery=Affichage/Modification des options de colisage
+OrderViewEditDeliveryScheduleInfo=Affichage/Modification des livraisons
 OrderViewPermissionError=Vous n'avez pas la permission de voir cette page. ("ORDERMGR_VIEW" ou "ORDERMGR_ADMIN" est n\u00E9cessaire)
+OrderWorkflow=Workflow 
 
 #OrderTrackingNumber=Tracking Number
 
