--- a/applications/party/config/PartyUiLabels_fr.properties
+++ b/applications/party/config/PartyUiLabels_fr.properties
@@ -117,6 +117,7 @@ PartyBirthDateMissingError=Format de la date de naissance non correct\: doit \u0
 PartyBusinessPhone=T\u00e9l\u00e9phone Bureau
 PartyBank=Banque
 PartyCannotUpdateContactBecauseNotWithSpecifiedParty=Erreur: d\u00e9tail des coordonn\u00e9es non mise \u00e0 jour, elles ne correspondent pas \u00e0 l'acteur sp\u00e9cifi\u00e9.
+PartyChangeParty=Changer d'acteur
 PartyCity=Ville
 PartyCityMissing=ville absente
 PartyClient=Client
