--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -1020,7 +1020,8 @@ ProductWarningOrderStatus=Attention : le statut de l'ordre est
 ProductWarningOrderType=Attention : le type d'ordre est
 ProductWarningProductNotVirtual=Cet article n'est pas virtuel, il ne poss\u00E9de g\u00E9n\u00E9ralement pas de variantes.
 ProductWarningVirtualProduct=C'est un article virtuel et vous ne pouvez g\u00E9n\u00E9ralement pas lui associer un inventaire d'article
-ProductWebSites=Site Web
+ProductWebSite=Site Web
+ProductWebSites=Sites Web
 ProductWebSiteId=Site Web [r\u00e9f]
 ProductWeight=Poids
 ProductWeightUnit=Unit\u00e9 de poids
