Applied patch to internationalize the quote stuff; many thanks to Jean-Luc Malet for all of this (OFBIZ-260).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5061 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -26,12 +26,12 @@ FacilityFacility=Service
 FacilityInventory=Inventaire
 FacilityNoFacility=Aucun Service
 FacilityNoOtherShippingMethods=Par d\u00e9faut : Aucun autre moyen de livraison possible.
-FacilityShipAvailable=Livrer les produits d\u00e8s qu'ils sont disponibles SVP (vous pouvez occasionner des frais additionnels d'exp\u00e9dition).
+FacilityShipAvailable=Livrer les produits d\u00e8s qu'ils sont disponibles (vous pouvez occasionner des frais additionnels d'exp\u00e9dition).
 FacilityShipping=Livraison
 FacilityShippingAndHandling=Exp\u00e9dition et manipulation
 FacilityShipOnceOrAvailable=Livraison compl\u00e8te ou partielle ?
 FacilitySpecialInstructions=Instructions sp\u00e9ciales
-FacilityWaitEntireOrderReady=Attendre que la commande soit compl\u00e8te avant de la livrer SVP.
+FacilityWaitEntireOrderReady=Attendre que la commande soit compl\u00e8te avant de la livrer.
  
 # productId = failing productId
 item.product_not_found=Article non trouv\u00e9, pas d'ajout dans le panier. [r\u00e9f article\: ${productId}]
@@ -48,7 +48,7 @@ OrderBeSureIncludeOrder=Soyez s\u00fbr d'inclure votre ordre
 OrderCancelAllItems=Supprimer tous les articles
 OrderCancelled=Annul\u00e9e
 OrderCannotBeChanged=(Ne peut \u00eatre modifi\u00e9 sans r\u00e9initialis\u00e9 la commande.) 
-OrderCartTotal=Total du chariot
+OrderCartTotal=Total du panier
 OrderChooseFollowingForGift=Vous pouvez \u00e9galement choisir parmi ces promotions
 OrderClearOrder=R\u00e9initialisation de la commande
 OrderCannotBeChanged=(Ne peut \u00eatre modifi\u00e9 sans r\uee09initialis\u00e9 la commande.) 
@@ -58,6 +58,10 @@ OrderContactInformation=Information sur l'acteur
 OrderCreatedBy=Cr\u00e9\u00e9 par
 OrderCreateNewReturn=Cr\u00e9er un nouveau retour
 OrderCreateOrder=Cr\u00e9ation de la commande
+OrderCreateOrderQuote=Cr\u00e9er un nouveau devis
+OrderCreateOrderQuoteItem=Cr\u00e9er une nouvelle ligne de devis
+OrderCreateOrderQuoteAttribute=Cr\u00e9er une nouvelle donn\u00e9e
+OrderCreateOrderQuoteCoefficient=Cr\u00e9er un nouveau oefficient
 OrderCreateReturn=Cr\u00e9er un retour
 OrderCurrentStatus=Statut Actuel
 OrderCustomerPo=R\u00e9f. Client
@@ -81,6 +85,12 @@ OrderItemsSubTotal=Sous-Total articles
 OrderItemTotal=Total Article
 OrderLookupOrder=Lancer recherche commande(s)
 OrderLookupReturn=Lancer recherche retour(s)
+OrderManagerApplication=Gestion de Commandes
+OrderNewQuote=Nouveau devis
+OrderNewQuoteAttribute=Nouvelle donn\u00e9e compl\u00e9mentaire
+OrderNewQuoteItem=Nouvelle ligne de devis
+OrderNewShipmentForShipGroup=Nouvelle exp\u00e9dition pour le groupe 
+OrderNoChannel=Aucun canal
 OrderNewShipmentForShipGroup=Nouvelle exp\u00e9dition pour le groupe 
 OrderNoChannel=Aucun canal
 OrderNoGiftWrap=Aucune Promotion
@@ -92,17 +102,17 @@ OrderNotes=Notes
 OrderNotesCreateNew=Cr\u00e9er une nouvelle note
 OrderNoReturnFound=Aucun retour.
 OrderNoReturnFoundWithId=Aucun retour trouv\u00e9 avec cette r\u00e9f\u00e9rence.
-OrderNotShipped=Non Livré
-OrderNotUsedForPurchase=Non utilis\u00e9 pour les commandes d'achat
-OrderNotUsedForSales=Non utilis\u00e9 pour les commandes de vente
+OrderNotShipped=Non Livr\u00e9
+OrderNotUsedForPurchase=Non utilis\u00e9 pour Achats
+OrderNotUsedForSales=Non utilis\u00e9 pour les Ventes
 OrderOfflineCheckMoney=En diff\u00e9r\u00e9:  V\u00e9rifiez le mandat
 OrderOrder=Commande
 OrderOrderConfirmation=Confirmation de la commande
-OrderOrderDate=Date commande
+OrderOrderDate=Date de la commande
 OrderOrdered=Command\u00e9e
 OrderOrderEntry=Cr\u00e9ation
 OrderOrderEntryCustomerInfo=Information sur le client
-OrderOrderEntryPaymentSettings=Renseignements sur la facturation
+OrderOrderEntryPaymentSettings=Modes de r\u00e8glement
 OrderOrderEntryShipToSettings=Renseignements sur la livraison
 OrderOrderFor=Commande pour
 OrderOrderFound=Commande(s) trouv\u00e9e(s)
@@ -110,32 +120,58 @@ OrderOrderHeaderInfo=Informations ent\u00eate
 OrderOrderId=R\u00e9f. de commande
 OrderOrderItems=Lignes de commande
 OrderOrderList=Commande(s) importante(s)
+OrderOrderManagerApplication=Gestion de commandes
 OrderOrderNeedingAttention=Commandes n\u00e9cessitant de l'attention
 OrderOrderNumber=Num\u00e9ro de commande
 OrderOrderOptionSettings=Renseignements des options de commande
 OrderOrderPurchaseToBeScheduled=Commandes d'achat \u00e0 lancer
+OrderOrderQuote=Devis
+OrderOrderQuoteAttributes=Donn\u00e9es compl\u00e9mentaires
+OrderOrderQuoteAttributeName=Nom de la donn\u00e9e
+OrderOrderQuoteAttributeValue=Valeur de la donn\u00e9e
+OrderOrderQuoteAverageCost=Cout moyen
+OrderOrderQuoteCoeffName=Nom du coeff.
+OrderOrderQuoteCoefficients=Coefficients du devis
+OrderOrderQuoteCoeffValue=Valeur du coeff.
+OrderOrderQuoteCostToPrice=Du cout au prix
+OrderOrderQuoteDefaultUnitPrice=Prix unit. par d\u00e9faut 
+OrderOrderQuoteDeliverableTypeId=Type de livrable
+OrderOrderQuoteEstimatedDeliveryDate=Date de livraison estim\u00e9e
+OrderOrderQuoteId=R\u00e9f. Devis
+OrderOrderQuoteIssueDate=Date du devis
+OrderOrderQuoteItem=Ligne de devis
+OrderOrderQuoteItems=Lignes de devis 
+OrderOrderQuoteItemSeqId=R\u00e9f. ligne
+OrderOrderQuoteManualUnitPrice=Prix Unit. manuel
+OrderOrderQuotePercent=Pourcentage de r\u00e9ussite
+OrderOrderQuotePrices=Prix du devis
+OrderOrderQuotes=Devis
+OrderOrderQuoteSkillTypeId=Type de comp\u00e9tences
+OrderOrderQuoteTypeId=Type de devis 	
+OrderOrderQuoteUnitPrice=Prix Unitaire
+OrderOrderQuoteuomId=Unit\u00e9 de mesure
+OrderOrderQuoteViewRequest=Voir Demande
+OrderOrderQuoteWorkEffortId=R\u00e9f. t\u00e2che
 OrderOrderReturn=Retour
 OrderOrderReturns=Retours
 OrderOrderShortcuts=Raccourcis
 OrderOrderTotal=Total commande
-OrderOrderType=Type d'ordre
+OrderOrderType=Type d'ordres
 OrderOriginFacility=Magasin d'origine
 OrderPaymentOfflineCheckMoney=Paiement en diff\u00e9r\u00e9:  V\u00e9rifiez le mandat
 OrderPONumber=R\u00e9f. Commande d'achat
 OrderPrice=Prix
-OrderProductStore=Marque commerciale
+OrderProductStore=Centre de profit
 OrderPromotionCouponCodes=Promotion/Coupon Codes
 OrderPurchaseOrder=Commande d'achat
 OrderQuantity=Quantit\u00e9
 OrderQuickRefundEntireOrder=Remboursement rapide de toute la commande
 OrderQuickShipEntireOrder=Livraison rapide de toute la commande
-OrderQuote=Quotation
-OrderQuotes=Quotation
 OrderRecalculateOrder=Recalcul de la commande
 OrderReceiveReturn=Recevoir un retour
 OrderRemainingSubTotal=Sous-Total restant
 OrderRequiredForSO=Obligatoire pour les commandes de vente
-OrderRemaining=Restante
+OrderRemaining=Restant(e)
 OrderReturned=Retourn\u00e9
 OrderReturnFound=Retour(s) trouv\u00e9(s)
 OrderReturnFromAddress=Retour de l'addresse
@@ -159,6 +195,7 @@ OrderShipmentInformation=Informations sur le moyen d'exp\u00e9dition
 OrderSplittingPreference=Choix de livraison
 OrderStartDateTime=D\u00e9but (Date/Heure)
 OrderStatusHistory=Evolution des statuts
+OrderStockEventPlanned=Mouvement de stock planifi\u00e9
 OrderSubTotal=Sous Total
 OrderSurvey=Apercu
 OrderThisOrderGift=Cette commande est une promotion
@@ -169,7 +206,7 @@ OrderTotalSalesTax=Total T.V.A.
 OrderTotalShippingAndHandling=Total exp\u00e9dition et manipulation
 OrderUnitList=Unit\u00e9 / Liste
 OrderUseDefaultComment=Utiliser par d\u00e9faut le commentaire pour les autres lignes
-OrderUseDefaultDesiredDeliveryDate=Utiliser par d\u00e9faut la date de livraison souhait\u00e9 pour les autres lignes
+OrderUseDefaultDesiredDeliveryDate=Utiliser par d\u00e9faut la date de livraison souhait\u00e9e pour les autres lignes
 OrderViewEditDelivery=Affichage/Modification des options de colisage
 OrderViewEditDeliveryScheduleInfo=Affichage/Modification des livraisons
 OrderViewPermissionError=Vous n'avez pas la permission de voir cette page. ("ORDERMGR_VIEW" ou "ORDERMGR_ADMIN" est n\u00E9cessaire)
