Little corrections to ui labels: thanks to Jean-Luc Malet for this patch (OFBIZ-258).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5062 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels_fr.properties
+++ b/applications/accounting/config/AccountingUiLabels_fr.properties
@@ -170,7 +170,7 @@ PageTitleFindBillingAccount=Recherche compte(s) de facturation
 PageTitleFindGlAccount=Recherche compte(s) comptable
 PageTitleLogin=Connexion
 PageTitleMain=Page principale
-PartyPartyId=Id de l'acteur
+PartyPartyId=R\u00e9f. de l'acteur
 PartyRoles=R\u00f4les
 PartyRoleTypeId=Id Type de r\u00f4le
 PartyTerms=Termes
